Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12112

Yanking text while in visual mode sometimes corrupts the markers so that gv doesn't work correctly right after

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.1.0
    • FakeVim
    • None
    • 0d19eb8db08e153616dd3003fa9c7a7bbd0f6a8d

      Reproduce:

      1. enter any visual mode
      2. select text in the down and/or right direction
      3. yank
      4. activate command 'gv'

      The last selection isn't selected properly, but re-selects properly having gone up/left instead.

        For Gerrit Dashboard: QTCREATORBUG-12112
        # Subject Branch Project Status CR V

            hjk hjk
            jirauser17471 user-1053d (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes