FakeVim: Command 'gv' restores visual selection after yanking

Task-number: QTCREATORBUG-12112
Change-Id: I303a2c1e25972f14f50235223b13c0bc28edf480
Reviewed-by: hjk <hjk121@nokiamail.com>